--- a/css/styles.css
+++ b/css/styles.css
@@ -25,57 +25,59 @@ body {
   min-height: 100vh;
 }
 
-h1, p {
-    margin: 0;
-    padding-left: 16px;
-    padding-right: 16px;
+h1,
+p {
+  margin: 0;
+  padding-left: 16px;
+  padding-right: 16px;
 }
 
 .container {
-    flex: 1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding-left: 20px;
-    padding-right: 20px;
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .card {
-    display: flex;
-    flex-direction: column;
-    width: 320px;
-    padding: 16px 16px 40px;
-    background-color: var(--card-background-color);
-    border-radius: 20px;
+  display: flex;
+  flex-direction: column;
+  width: 320px;
+  padding: 16px 16px 40px;
+  background-color: var(--card-background-color);
+  border-radius: 20px;
+  box-shadow: 0 25px 25px 0 rgba(0 0 0 / 4.77%);
 }
 
 .card img {
-    width: 100%;
-    height: auto;
-    border-radius: 10px;
-    margin-bottom: 24px;
+  width: 100%;
+  height: auto;
+  border-radius: 10px;
+  margin-bottom: 24px;
 }
 
 .card h1 {
-    text-align: center;
-    font-size: 22px;
-    font-weight: 700;
-    line-height: 120%;
-    color: var(--title-color);
-    margin-bottom: 16px;
+  text-align: center;
+  font-size: 22px;
+  font-weight: 700;
+  line-height: 120%;
+  color: var(--title-color);
+  margin-bottom: 16px;
 }
 
 .card p {
-    text-align: center;
-    font-size: 15px;
-    font-weight: 400;
-    line-height: 140%;
-    letter-spacing: 0.2px;
-    color: var(--text-color);
+  text-align: center;
+  font-size: 15px;
+  font-weight: 400;
+  line-height: 140%;
+  letter-spacing: 0.2px;
+  color: var(--text-color);
 }
 
 footer {
-    padding: 16px 0;
+  padding: 16px 0;
 }
 
 .attribution {
