--- a/css/styles.css
+++ b/css/styles.css
@@ -21,7 +21,6 @@ body {
   background-color: var(--body-background-color);
   margin: 0;
   display: flex;
-  flex-direction: column;
   min-height: 100vh;
 }
 
@@ -77,6 +76,9 @@ p {
 }
 
 footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
   padding: 16px 0;
 }
 
